src/test/ui/parser/issue-66357-unexpected-unreachable.stderr
error: missing separator `,`
  --> $DIR/issue-66357-unexpected-unreachable.rs:14:14
   |
LL | fn f() { |[](* }
   |          -   ^
   |          |
   |          while parsing the list starting here

error: expected one of `&`, `(`, `)`, `-`, `...`, `..=`, `..`, `[`, `_`, `box`, `mut`, `ref`, `|`, identifier, or path, found `*`
  --> $DIR/issue-66357-unexpected-unreachable.rs:14:14
   |
LL | fn f() { |[](* }
   |             -^ help: `)` may belong here
   |             |
   |             unclosed delimiter

error: aborting due to 2 previous errors

